java8.spoofax3/test/statics/java/packages/imports/single-type-import-with-same-name-as-class-in-compilation-unit-not-allowed.no.spt
module packages/single-type-import-with-same-name-as-class-in-compilation-unit-not-allowed_no

language metaborg-java

test single-type-import-with-same-name-as-class-in-compilation-unit-not-allowed [[

test;



// error: A is already defined in this compilation unit

[p] {

    [A]
    package p;
    import q.A;
    public class A {
    }

}

[q] {

    [A]
    package q;
    public class A {
    }

}

]] analysis fails
   run javacFails to ""
